random-strings/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2346 # Ingress port
      protocol: TCP
      targetPort: 8080 # App port
